--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.6",
     "@mui/system": "^5.13.5",
     "@types/next": "^9.0.0",
     "@types/node": "18.15.13",
