--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
     "@mui/system": "^5.13.5",
+    "@supabase/supabase-js": "^2.26.0",
     "@types/next": "^9.0.0",
     "@types/node": "18.15.13",
     "@types/react": "18.0.38",
