--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.4",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
