--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "18.15.13",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
+    "@uiball/loaders": "^1.3.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
