--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.26.0",
     "@types/next": "^9.0.0",
     "@types/node": "18.15.13",
@@ -23,16 +25,25 @@
     "@types/react-dom": "18.0.11",
     "@uiball/loaders": "^1.3.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "firebase": "^10.1.0",
+    "lucide-react": "^0.265.0",
+    "mongodb": "^5.7.0",
     "next": "13.3.1",
+    "next-auth": "^4.23.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.4",
+    "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.1",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "5.0.4"
   }
 }
