--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/pages/api/route.js", "src/components/Reviews/GiveReviewBox.tsx", "src/lib/mongodb.ts"],
   "exclude": ["node_modules"]
 }
