--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "firebase": "^10.1.0",
     "lucide-react": "^0.265.0",
     "mongodb": "^5.7.0",
+    "mongoose": "^7.4.3",
     "next": "13.3.1",
     "next-auth": "^4.23.0",
     "next-themes": "^0.2.1",
