--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
     "@uiball/loaders": "^1.3.0",
+    "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
